--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -35,10 +35,10 @@
   .codes .card_wrap .card .inner{border-right:1px solid #ccc;border-left:1px solid #ccc;float:left;width:57%;padding:1.5%;}
   .codes .card_wrap .card .inner>.regular{color:#000;font-size:17px;border-bottom:2px solid #000;}
   .codes .card_wrap .card .inner>.regular>em{font-weight:400;background:#000;padding:0 5px;color:#fff;}
-  .codes .card_wrap .card .inner>p>a{line-height:1.4;height:2.8em;overflow:hidden;margin:10px 0;text-decoration:none;color:#000;display:block;}
+  .codes .card_wrap .card .inner>p>a{line-height:1.4;height:2.8em;overflow:hidden;margin:10px 0;text-decoration:none;color:#616161;display:block;}
   .codes .card_wrap .card .inner>em{display:block;margin-right:5px;font-weight:400;}
   .codes .card_wrap .card .inner>em>span{font-size:15px;color:#ccc;text-decoration:line-through;margin-left:5px;}
-  .codes .card_wrap .card .inner>.code_high>p{font-size:13px;display:inline;border-bottom:0.4em solid rgba(255,0,0,0.2);position:relative;}
+  .codes .card_wrap .card .inner>.code_high>p{color:#616161;font-size:13px;display:inline;border-bottom:0.4em solid rgba(51,51,255,0.2);position:relative;}
   .codes .card_wrap .card .inner>.code_high>p>span{font-weight:400;position:relative;top:0.4em;}
   .codes .card_wrap .card .inner>.code_high>p>span>strong{font-size:17px;}
   .codes .card_wrap .card .deal_btn{float:left;width:13%;text-align:center;margin:35px 1.5% 0 1.5%;border:1px solid;padding:10px 0;}
