--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -1,14 +1,16 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:100');
 .gadgets{margin:270px 0;}
 /*.index_gad{margin:30px 0;}*/
 .gadgets .card_wrap{column-width:300px;column-gap:10px;}
-.gadgets .card_wrap .card{margin:10px 1%;;position: relative;background: #fff; overflow: hidden;display:inline-block;}
+.gadgets .card_wrap .card{margin:20px 1%;;position: relative;background: #fff; overflow: hidden;display:inline-block;}
 .gadgets .card_wrap .card, 
-.gadgets .card-nav ul{box-shadow: 0 2px 1px rgba(0, 0, 0, 0.1);border-radius:10px;}
+.gadgets .card-nav ul{/*box-shadow: 0 2px 1px rgba(0, 0, 0, 0.1);*//*border-radius:10px;*/border-bottom:1px solid #ccc;}
 .gadgets .card_wrap .card-header,
-.gadgets .card_wrap .card-body{position:relative;padding:5px;text-align:center;}
-.gadgets .card_wrap .card-body h4{margin-top:15px;}
-.gadgets .card_wrap .card-body h4 a{text-decoration:none;color:#3d3d3d;font-size:16px;border-bottom:1px solid #ccc;}
-.gadgets .card_wrap .card-body p{margin:10px 0;}
+.gadgets .card_wrap .card-body{position:relative;padding:5px;}
+.gadgets .card_wrap .card-body span{border-bottom:1px solid #ccc;width:55%;display:block;color:#616161;}
+.gadgets .card_wrap .card-body h4{margin-top:10px;line-height:1.2;font-family: 'Montserrat', sans-serif;}
+.gadgets .card_wrap .card-body h4 a{text-decoration:none;color:#3d3d3d;font-size:26px;}
+.gadgets .card_wrap .card-body p{margin:10px 0;font-weight:300;color:#616161;}
 .gadgets .card_wrap .card-body .btn{margin:10px 0;display:inline-block;}
 .gadgets .card_wrap .card-body .btn>em{float:left;font-size:17px;background:#000;color:#fff;padding:3px 20px;border:1px solid #000;line-height:20px;}
 .gadgets .card_wrap .card-body .btn>a{float:left;text-decoration:none;color:#000;font-size:20px;border:1px solid #000;padding:3px 20px;line-height:20px;}
