--- a/app/views/home/index_02.html.erb
+++ b/app/views/home/index_02.html.erb
@@ -12,6 +12,7 @@
       </div>        
     </div>
 
+
     <div class="gadgets">
       <div class="wrap">
         <div class="card_wrap clearfix">
@@ -30,9 +31,9 @@
                 <% end %>
 
                 <% if gadget.gg_title.present? %>
-                  <span><%= gadget.gg_from %></span>
+                  <!-- <span><%= gadget.gg_from %></span> -->
                   <h4><a target="_blank" href="<%= gadget.gg_url %>"><%= gadget.gg_title %></a></h4>
-                  <p><%= gadget.gg_intro %></p>
+                  <!-- <p><%= gadget.gg_intro %></p> -->
                   <div class="btn clearfix">
                     <em>$<%= gadget.gg_aprice %></em><a target="_blank" href="<%= gadget.gg_url %>">Buy Now</a>
                   </div>
