--- a/app/views/recommends/_form.html.erb
+++ b/app/views/recommends/_form.html.erb
@@ -6,7 +6,7 @@
         <div class="input_header clearfix ">
           <div class="input_header_box ib_comm ">
             <p>Main</p>
-            <%= f.input :re_filter, label: "[tech, geeky, smarthome, kitchen, fashion, travel]"%>
+            <%= f.input :re_filter, label: "[tech, geeky, smarthome, home_kitchen, fashion, travel]"%>
             <%= f.input :re_title %>
             <%= f.input :re_intro %>
             <%= f.input :sub_intro %>
