--- a/app/views/recommends/index.html.erb
+++ b/app/views/recommends/index.html.erb
@@ -38,8 +38,8 @@
               <li><button class="filter-button btn btn-md btn-primary" data-filter="*">All Featured</button></li>
               <li><button class="filter-button btn btn-md white-text" data-filter="tech">Tech+</button></li>
               <li><button class="filter-button btn btn-md white-text" data-filter="geeky">Geeky</button></li>
-              <li><button class="filter-button btn btn-md" data-filter="smarthome">Smart Home</button></li>
-              <li><button class="filter-button btn btn-md" data-filter="kitchen">Kitchen&Home</button></li>
+              <li><button class="filter-button btn btn-md" data-filter="smarthome">SmartHome</button></li>
+              <li><button class="filter-button btn btn-md" data-filter="home_kitchen">Home&Kitchen</button></li>
               <li><button class="filter-button btn btn-md white-text" data-filter="fashion">Fashion</button></li>
               <li><button class="filter-button btn btn-md white-text" data-filter="travel">Travel</button></li>
               <% if can? :update, @recommends %>
@@ -60,8 +60,8 @@
               <li><button class="filter-button btn btn-md btn-primary" data-filter="*">All Featured</button></li>
               <li><button class="filter-button btn btn-md white-text" data-filter="tech">Tech+</button></li>
               <li><button class="filter-button btn btn-md white-text" data-filter="geeky">Geeky</button></li>
-              <li><button class="filter-button btn btn-md" data-filter="smarthome">Smart Home</button></li>
-              <li><button class="filter-button btn btn-md" data-filter="kitchen">Kitchen&Home</button></li>
+              <li><button class="filter-button btn btn-md" data-filter="smarthome">SmartHome</button></li>
+              <li><button class="filter-button btn btn-md" data-filter="home_kitchen">Home&Kitchen</button></li>
               <li><button class="filter-button btn btn-md white-text" data-filter="fashion">Fashion</button></li>
               <li><button class="filter-button btn btn-md white-text" data-filter="travel">Travel</button></li>
               <% if can? :update, @recommends %>
