--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -32,17 +32,17 @@
   .codes .card_wrap .card{border-bottom:1px solid #ccc;margin:0 0 15px 0;padding-bottom:10px;}
   .codes .card_wrap .card .image_box{float:left;width:20%;height:150px;padding:1.5%;}
   .codes .card_wrap .card .image_box img{width:100%;height:100%;object-fit:contain;}
-  .codes .card_wrap .card .inner{border-right:1px solid #ccc;border-left:1px solid #ccc;float:left;width:57%;padding:1.5%;}
+  .codes .card_wrap .card .inner{font-family: 'Montserrat', sans-serif;font-weight:400;border-right:1px solid #ccc;border-left:1px solid #ccc;float:left;width:57%;padding:1.5%;}
   .codes .card_wrap .card .inner>.regular{color:#000;font-size:17px;border-bottom:2px solid #000;}
-  .codes .card_wrap .card .inner>.regular>em{font-weight:400;background:#000;padding:0 5px;color:#fff;}
+  .codes .card_wrap .card .inner>.regular>em{background:#000;padding:0 5px;color:#fff;}
   .codes .card_wrap .card .inner>p>a{line-height:1.4;height:2.8em;overflow:hidden;margin:10px 0;text-decoration:none;color:#616161;display:block;}
-  .codes .card_wrap .card .inner>em{display:block;margin-right:5px;font-weight:400;}
+  .codes .card_wrap .card .inner>em{display:block;margin-right:5px;}
   .codes .card_wrap .card .inner>em>span{font-size:15px;color:#ccc;text-decoration:line-through;margin-left:5px;}
   .codes .card_wrap .card .inner>.code_high>p{color:#616161;font-size:13px;display:inline;border-bottom:0.4em solid rgba(51,51,255,0.2);position:relative;}
-  .codes .card_wrap .card .inner>.code_high>p>span{font-weight:400;position:relative;top:0.4em;}
+  .codes .card_wrap .card .inner>.code_high>p>span{position:relative;top:0.4em;}
   .codes .card_wrap .card .inner>.code_high>p>span>strong{font-size:17px;}
-  .codes .card_wrap .card .deal_btn{float:left;width:13%;text-align:center;margin:35px 1.5% 0 1.5%;border:1px solid;padding:10px 0;}
-  .codes .card_wrap .card .deal_btn a{text-decoration:none;color:#000;display:block;}
+  .codes .card_wrap .card .deal_btn{float:left;width:13%;text-align:center;margin:35px 1.5% 0 1.5%;border:1px solid #616161;padding:10px 0;}
+  .codes .card_wrap .card .deal_btn a{text-decoration:none;color:#616161;display:block;font-family: 'Montserrat', sans-serif;}
 }
 
 @media screen and (max-width:640px){
@@ -66,9 +66,9 @@
   .codes .rt_cnt .sort_box ul li a{border-radius:10px;text-decoration:none;color:#fff;display:block;background:#000;text-align:center;padding:5px;}
  
   .codes .card_wrap{column-width:170px;column-gap:5px;}
-  .codes .card_wrap .card{display:inline-block;margin:0;margin-bottom:30px;padding:5px;text-align:center;border-bottom:1px solid #ddd;}
+  .codes .card_wrap .card{display:inline-block;margin:0;margin-bottom:30px;padding:5px;border-bottom:1px solid #ddd;}
   .codes .card_wrap .card .image_box img{width:100%;}
-  .codes .card_wrap .card .inner{padding:7px;}
+  .codes .card_wrap .card .inner{padding:7px;font-family: 'Montserrat', sans-serif;font-weight:400}
   .codes .card_wrap .card .inner>.regular{font-size:13px;border-bottom:2px solid #000;}
   .codes .card_wrap .card .inner>.regular>em{background:#000;padding:0 5px;color:#fff;}
   .codes .card_wrap .card .inner>p{margin:10px 0;}
@@ -78,7 +78,7 @@
   .codes .card_wrap .card .inner>.code_high>p{display:inline;border-bottom:0.4em solid rgba(255,0,0,0.2);position:relative;}
   .codes .card_wrap .card .inner>.code_high>p>span{font-weight:400;position:relative;top:0.4em;}
   .codes .card_wrap .card .deal_btn{float:none;width:100%;padding:7px;margin-top:10px;}
-  .codes .card_wrap .card .deal_btn a{text-decoration:none;color:#000;margin:20px 0 0 0;border:1px solid;padding:3px 20px;}
+  .codes .card_wrap .card .deal_btn a{text-decoration:none;color:#616161;margin:20px 0 0 0;border:1px solid;padding:3px 20px;}
 }
 
 @media screen and (max-width:400px){
@@ -106,14 +106,14 @@
   
   .coupons .coupons_wrap{margin:20px 0 0 0;}
   .coupons .coupons_wrap .card{border-bottom:1px solid #ccc;margin:0 0 15px 0;padding-bottom:10px;}
-  .coupons .coupons_wrap .card .info_box{border-right:1px solid #ccc;float:left;width:18%;height:100px;padding:1.5% 0;margin:0 1%;text-align:center;background:#fff;color:#000;}
+  .coupons .coupons_wrap .card .info_box{font-family: 'Montserrat', sans-serif;border-right:1px solid #ccc;float:left;width:18%;height:100px;padding:1.5% 0;margin:0 1%;text-align:center;background:#fff;color:#000;}
   .coupons .coupons_wrap .card .info_box a{text-decoration:none;color:#000;}
   .coupons .coupons_wrap .card .info_box p{font-size:30px;font-weight:bold;line-height:1.2;margin:3px 20px;}
   .coupons .coupons_wrap .card .info_box em{}
   .coupons .coupons_wrap .card .info_box .img_box{height:100px;padding:0;}
   .coupons .coupons_wrap .card .info_box img{width:100%;height:100%;object-fit:contain;}
   .coupons .coupons_wrap .card .info_box strong{background:#000;color:#fff;border-radius:10px;padding:0 10px;display:block;width:50%;margin:5px auto;}
-  .coupons .coupons_wrap .card .inner{border-right:1px solid #ccc;float:left;width:57%;padding:1.5%;}
+  .coupons .coupons_wrap .card .inner{border-right:1px solid #ccc;float:left;width:57%;padding:1.5%;font-family: 'Montserrat', sans-serif;font-weight:400;}
   .coupons .coupons_wrap .card .inner p{font-size:17px;font-weight:bold;line-height:1.2;margin-top:5px;}
   .coupons .coupons_wrap .card .inner p>a{text-decoration:none;color:#000;}
   .coupons .coupons_wrap .card .inner em{display:block;margin:7px 0;font-size:13px;}
@@ -131,8 +131,9 @@
   .coupons .rt_cnt .cnt_box button:hover{border-bottom:1px solid;color:#000;}
   /*.coupons .coupons_wrap{column-width:170px;column-gap:5px;}*/
   .coupons .coupons_wrap .card{border-radius:5px;display:inline-block;margin:0;margin-bottom:15px;padding:5px;box-shadow: 1px 1px 3px rgba(0,0,0,0.5);}
-  .coupons .coupons_wrap .card .info_box{float:left;width:30%;padding:10px 5%;text-align:center;background:#fff;color:#000;}
+  .coupons .coupons_wrap .card .info_box{font-family: 'Montserrat', sans-serif;float:left;width:30%;padding:10px 5%;text-align:center;background:#fff;color:#000;}
   .coupons .coupons_wrap .card .info_box p{font-size:25px;font-weight:500;line-height:1.2;}
+  .coupons .coupons_wrap .card .inner{font-family: 'Montserrat', sans-serif;font-weight:400;}
   .coupons .coupons_wrap .card .inner p>a{text-decoration:none;color:#000;}
   .coupons .coupons_wrap .card .info_box em{}
   .coupons .coupons_wrap .card .info_box a{text-decoration:none;color:#000;}
