--- a/app/views/gadgets/index.html.erb
+++ b/app/views/gadgets/index.html.erb
@@ -58,9 +58,9 @@
                         </div>
                       <% end %>
 
-                     
+                     <!-- <span><%= gadget.gg_from %></span> -->
                       <h4><a target="_blank" href="<%= gadget.gg_url %>"><%= gadget.gg_title %></a></h4>
-                      <p><%= gadget.gg_intro %></p>
+                      <!-- <p><%= gadget.gg_intro %></p> -->
                       <div class="btn clearfix">
                         <em>$<%= gadget.gg_aprice %></em><a target="_blank" href="<%= gadget.gg_url %>">Buy Now</a>
                       </div>
