--- a/app/views/recommends/index.html.erb
+++ b/app/views/recommends/index.html.erb
@@ -36,7 +36,7 @@
 
             <ul class="filter-search">
               <li><button class="filter-button btn btn-md btn-primary" data-filter="*">All Featured</button></li>
-              <li><button class="filter-button btn btn-md white-text" data-filter="tech">Tech+</button></li>
+              <li><button class="filter-button btn btn-md white-text" data-filter="gadget">Gadget</button></li>
               <li><button class="filter-button btn btn-md white-text" data-filter="geeky">Geeky</button></li>
               <li><button class="filter-button btn btn-md" data-filter="home">Home</button></li>
               <li><button class="filter-button btn btn-md" data-filter="kitchen">Kitchen</button></li>
@@ -58,7 +58,7 @@
           <div class="sm_mobile">
             <ul class="filter-search">
               <li><button class="filter-button btn btn-md btn-primary" data-filter="*">All Featured</button></li>
-              <li><button class="filter-button btn btn-md white-text" data-filter="tech">Tech+</button></li>
+              <li><button class="filter-button btn btn-md white-text" data-filter="gadget">Gadget</button></li>
               <li><button class="filter-button btn btn-md white-text" data-filter="geeky">Geeky</button></li>
               <li><button class="filter-button btn btn-md" data-filter="home">Home</button></li>
               <li><button class="filter-button btn btn-md" data-filter="kitchen">Kitchen</button></li>
