--- a/app/views/gadgets/index.html.erb
+++ b/app/views/gadgets/index.html.erb
@@ -64,11 +64,11 @@
                       <div class="btn clearfix">
                         <em>$<%= gadget.gg_aprice %></em><a target="_blank" href="<%= gadget.gg_url %>">Buy Now</a>
                       </div>
-                      <%# if can? :update, gadget %>
-                        <!-- <div class="btn clearfix admin">
+                      <% if can? :update, gadget %>
+                        <div class="btn clearfix admin">
                           <em><%= link_to "Edit", edit_gadget_path(gadget) %></em><%= link_to "Delete", gadget_path(gadget), method: :delete, data: {confirm: "Are you sure?"}%>
-                        </div> -->     
-                      <%# end %>
+                        </div>     
+                      <% end %>
                       <% if can? :update, gadget %>
                         <div class="pinterest">
                          <script async defer data-pin-hover="true" data-pin-tall="true" src="//assets.pinterest.com/js/pinit.js"></script>
