--- a/app/views/recommends/index.html.erb
+++ b/app/views/recommends/index.html.erb
@@ -36,10 +36,9 @@
 
             <ul class="filter-search">
               <li><button class="filter-button btn btn-md btn-primary" data-filter="*">All Featured</button></li>
-              <li><button class="filter-button btn btn-md white-text" data-filter="gadget">Gadget</button></li>
+              <li><button class="filter-button btn btn-md white-text" data-filter="gadgets">Gadgets</button></li>
               <li><button class="filter-button btn btn-md white-text" data-filter="geeky">Geeky</button></li>
-              <li><button class="filter-button btn btn-md" data-filter="home">Home</button></li>
-              <li><button class="filter-button btn btn-md" data-filter="kitchen">Kitchen</button></li>
+              <li><button class="filter-button btn btn-md" data-filter="home&kitchen">Home&Kitchen</button></li>
               <li><button class="filter-button btn btn-md white-text" data-filter="fashion">Fashion</button></li>
               <li><button class="filter-button btn btn-md white-text" data-filter="travel">Travel</button></li>
               <% if can? :update, @recommends %>
@@ -58,10 +57,9 @@
           <div class="sm_mobile">
             <ul class="filter-search">
               <li><button class="filter-button btn btn-md btn-primary" data-filter="*">All Featured</button></li>
-              <li><button class="filter-button btn btn-md white-text" data-filter="gadget">Gadget</button></li>
+              <li><button class="filter-button btn btn-md white-text" data-filter="gadgets">Gadgets</button></li>
               <li><button class="filter-button btn btn-md white-text" data-filter="geeky">Geeky</button></li>
-              <li><button class="filter-button btn btn-md" data-filter="home">Home</button></li>
-              <li><button class="filter-button btn btn-md" data-filter="kitchen">Kitchen</button></li>
+              <li><button class="filter-button btn btn-md" data-filter="home&kitchen">Home&Kitchen</button></li>
               <li><button class="filter-button btn btn-md white-text" data-filter="fashion">Fashion</button></li>
               <li><button class="filter-button btn btn-md white-text" data-filter="travel">Travel</button></li>
               <% if can? :update, @recommends %>
