--- a/app/views/deals/_body_coupon.html.erb
+++ b/app/views/deals/_body_coupon.html.erb
@@ -56,6 +56,22 @@
     </div>
  </div>
 
+ <div class="card clearfix" data-tags="Sale">
+    <div class="info_box">
+      <a target="_blank" href="https://amzn.to/2GxfR4C">
+        <p><span>20%</span><br /><em>OFF</em></p>
+        <strong>Sale</strong>
+      </a>
+    </div>
+    <div class="inner">
+      <p><a target="_blank" href="https://amzn.to/2GxfR4C">Save 20% on AmazonBasics Computer and Wireless Accessories</a></p>
+      <span>Expiration: On going</span>
+    </div> 
+    <div class="deal_btn">
+      <a target="_blank" href="https://amzn.to/2GxfR4C">Shop Now</a>
+    </div>
+</div>
+
 <div class="card clearfix" data-tags="Sale">
     <div class="info_box">
       <a target="_blank" href="https://amzn.to/2TDgO4q">
@@ -196,20 +212,4 @@
 </div>
 
 
-<!-- <div class="card clearfix" data-tags="Category">
-    <div class="info_box">
-      <a target="_blank" href="Site_Link">
-        <p><span>Percentage%</span><br /><em>OFF</em></p>
-        <strong>Category</strong>
-      </a>
-    </div>
-    <div class="inner">
-      <p><a target="_blank" href="Site_Link">Coupons_Title</a></p>
-      <em>Coupons_Description</em>
-      <span>Expiration: Coupons_Date</span>
-    </div> 
-    <div class="deal_btn">
-      <a target="_blank" href="Site_Link">Shop Now</a>
-    </div>
-</div>
- -->
+
