--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -38,6 +38,7 @@
   .codes .card_wrap .card .inner>p>a{line-height:1.4;height:2.8em;overflow:hidden;margin:10px 0;text-decoration:none;color:#616161;display:block;}
   .codes .card_wrap .card .inner>em{display:block;margin-right:5px;}
   .codes .card_wrap .card .inner>em>span{font-size:15px;color:#ccc;text-decoration:line-through;margin-left:5px;}
+  .codes .card_wrap .card .inner>.code_high>em{font-size:13px;color:#616161;display:block;margin-top:10px;}
   .codes .card_wrap .card .inner>.code_high>p{color:#616161;font-size:13px;display:inline;border-bottom:0.4em solid rgba(51,51,255,0.2);position:relative;}
   .codes .card_wrap .card .inner>.code_high>p>span{position:relative;top:0.4em;}
   .codes .card_wrap .card .inner>.code_high>p>span>strong{font-size:17px;}
@@ -106,20 +107,20 @@
   
   .coupons .coupons_wrap{margin:20px 0 0 0;}
   .coupons .coupons_wrap .card{border-bottom:1px solid #ccc;margin:0 0 15px 0;padding-bottom:10px;}
-  .coupons .coupons_wrap .card .info_box{font-family: 'Montserrat', sans-serif;border-right:1px solid #ccc;float:left;width:18%;height:100px;padding:1.5% 0;margin:0 1%;text-align:center;background:#fff;color:#000;}
+  .coupons .coupons_wrap .card .info_box{font-family: 'Montserrat', sans-serif;float:left;width:18%;height:100px;padding:1.5% 0;margin:0 1%;text-align:center;background:#fff;color:#000;}
   .coupons .coupons_wrap .card .info_box a{text-decoration:none;color:#000;}
   .coupons .coupons_wrap .card .info_box p{font-size:30px;font-weight:bold;line-height:1.2;margin:3px 20px;}
   .coupons .coupons_wrap .card .info_box em{}
   .coupons .coupons_wrap .card .info_box .img_box{height:100px;padding:0;}
   .coupons .coupons_wrap .card .info_box img{width:100%;height:100%;object-fit:contain;}
   .coupons .coupons_wrap .card .info_box strong{background:#000;color:#fff;border-radius:10px;padding:0 10px;display:block;width:50%;margin:5px auto;}
-  .coupons .coupons_wrap .card .inner{border-right:1px solid #ccc;float:left;width:57%;padding:1.5%;font-family: 'Montserrat', sans-serif;font-weight:400;}
+  .coupons .coupons_wrap .card .inner{float:left;width:57%;padding:1.5%;font-family: 'Montserrat', sans-serif;font-weight:400;}
   .coupons .coupons_wrap .card .inner p{font-size:17px;font-weight:bold;line-height:1.2;margin-top:5px;}
   .coupons .coupons_wrap .card .inner p>a{text-decoration:none;color:#000;}
   .coupons .coupons_wrap .card .inner em{display:block;margin:7px 0;font-size:13px;}
   .coupons .coupons_wrap .card .inner em>a{text-decoration:none;color:#08f;}
   .coupons .coupons_wrap .card .inner span{}
-  .coupons .coupons_wrap .card .deal_btn{float:left;width:15%;padding:1%;text-align:center;margin:50px 0;}
+  .coupons .coupons_wrap .card .deal_btn{border-left:1px solid #ccc;float:left;width:15%;padding:1%;text-align:center;margin:50px 0;}
   .coupons .coupons_wrap .card .deal_btn a{text-decoration:none;color:#000;border:1px solid;padding:10px 17px;}
 }
 
