--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -31,6 +31,7 @@
               <li>
                 <a href="#n">LAST 7 DAYS CODES LIST</a>
                 <ul>
+                  <li><a href="/promocodes_days/day_03">Apr. 22. 2019</a></li>
                   <li><a href="/promocodes_days/day_02">Apr. 14. 2019</a></li>
                   <li><a href="/promocodes_days/day_01">Apr. 10. 2019</a></li>
                   <!-- <li><a href="#n">Feb. 08. 2019</a></li> -->
