--- a/app/views/promocodes_days/_day_01.html.erb
+++ b/app/views/promocodes_days/_day_01.html.erb
@@ -7,6 +7,7 @@
     <p><a target="_blank" href="https://amzn.to/2Ckd8tV">Clip on Mini Desk Fan</a></p>
     <div class="code_high">
       <p><span>Take <strong>30% off at $19.99</strong> using code:30NZH8CO</span></p>
+      <em>*Pricing may change or expire at anytime.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -25,6 +26,7 @@
     <p><a target="_blank" href="https://amzn.to/2FjOtY4">OURS Women's Casual T-Shirts Round Neck Button Side Long Sleeve Tunic Tops</a></p>
     <div class="code_high">
       <p><span>Take <strong>40% off at $14.99</strong> using code:40GMCL7X</span></p>
+      <em>*Pricing may change or expire at anytime.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -43,6 +45,7 @@
     <p><a target="_blank" href="https://amzn.to/2UCXW25">prodcut_description</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $9.98</strong> using code:50XPALIR</span></p>
+      <em>*Pricing may change or expire at anytime.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -61,6 +64,7 @@
     <p><a target="_blank" href="https://amzn.to/2TJx4Be">Kinesiology Tape</a></p>
     <div class="code_high">
       <p><span>Take <strong>58% off at $11.89</strong> using code:58ZFY6HG</span></p>
+      <em>*Pricing may change or expire at anytime.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -79,6 +83,7 @@
     <p><a target="_blank" href="https://amzn.to/2Y7rsPy">Jack Skellington Plush Doll</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $13.98</strong> using code:50ZOCBWO</span></p>
+      <em>*Pricing may change or expire at anytime.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -97,6 +102,7 @@
     <p><a target="_blank" href="https://amzn.to/2TK9cNH">Selfie Ring Light,Oternal Rechargeable Portable Clip-on Selfie Fill Light with 36 LED for iPhone Android Smart Phone Photography</a></p>
     <div class="code_high">
       <p><span>Take <strong>58% off at $13.99</strong> using code:58OPTD46</span></p>
+      <em>*Pricing may change or expire at anytime.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -115,6 +121,7 @@
     <p><a target="_blank" href="https://amzn.to/2FdxOEq">Clear Purse, iSPECLE Clear Bag Stadium Approved for NFL PGA Inside Pocket</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $8.99</strong> using code:5097TPYU</span></p>
+      <em>*Pricing may change or expire at anytime.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -132,6 +139,7 @@
     <p><a target="_blank" href="https://amzn.to/2TLbWug">MEKBOK Wine Bottle Fairy Lights with Cork 5 Lighting Modes + Timer 6 Pack Copper Wire String Starry LED Lights for Bottle DIY...</a></p>
     <div class="code_high">
       <p><span>Take <strong>35% off at $12.99</strong> using code:352VG6FW</span></p>
+      <em>*Pricing may change or expire at anytime.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -150,6 +158,7 @@
     <p><a target="_blank" href="https://amzn.to/2Fj8w8a">Baconlor Dog Leash Belt Waist Wearing - Durable Strong Safe Bungee Dog Leash </a></p>
     <div class="code_high">
       <p><span>Take <strong>60% off at $16.99</strong> using code:60IAKRG4</span></p>
+      <em>*Pricing may change or expire at anytime.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -167,6 +176,7 @@
     <p><a target="_blank" href="https://amzn.to/2Y37iWV">Igmis Pure Raw Honey 52.9 ounces</a></p>
     <div class="code_high">
       <p><span>Take <strong>35% off at $21.99</strong> using code:35Y28BF6</span></p>
+      <em>*Pricing may change or expire at anytime.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -184,6 +194,7 @@
     <p><a target="_blank" href="https://amzn.to/2OacdRk">Sabrent Universal Docking Station with Stand for Tablets and Notebooks Supports PC</a></p>
     <div class="code_high">
       <p><span>Take <strong>47% off at $88.49</strong> using code:477MQSPF</span></p>
+      <em>*Pricing may change or expire at anytime.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -201,6 +212,7 @@
     <p><a target="_blank" href="https://amzn.to/2OdQpEk">Phenyx Pro UHF Wireless Microphone System,1 Handheld Mic 1 Headset Mic 1 Lapel Mic Combo, Portable Size...</a></p>
     <div class="code_high">
       <p><span>Take <strong>10% off at $78.99</strong> using code:10PHENYX51</span></p>
+      <em>*Pricing may change or expire at anytime.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -218,6 +230,7 @@
     <p><a target="_blank" href="product_link">prodcut_description</a></p>
     <div class="code_high">
       <p><span>Take <strong>65% off at $39.99</strong> using code:65AC8BWD</span></p>
+      <em>*Pricing may change or expire at anytime.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -235,6 +248,7 @@
     <p><a target="_blank" href="https://amzn.to/2OeQ4Bv">Windscreen4less Heavy Duty Privacy Screen Fence in Color Beige</a></p>
     <div class="code_high">
       <p><span>Take <strong>20% off at $49.99</strong> using code:20WINDSCREEN</span></p>
+      <em>*Pricing may change or expire at anytime.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -251,6 +265,7 @@
     <p><a target="_blank" href="https://amzn.to/2OceSKi">HollyHOME Luxury Checkered Super Soft Solid Single Pinsonic Quilted Bed Quilt Bedspread Bed Cover</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $22.99</strong> using code:50YJWLUH</span></p>
+      <em>*Pricing may change or expire at anytime.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -267,6 +282,7 @@
     <p><a target="_blank" href="https://amzn.to/2Y6mgLS">Large Stainless Steel French Press Coffee Maker</a></p>
     <div class="code_high">
       <p><span>Take <strong>15% off at $24.99</strong> using code:15FRENCH</span></p>
+      <em>*Pricing may change or expire at anytime.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -284,6 +300,7 @@
     <p><a target="_blank" href="https://amzn.to/2OdSdxe">101 Oz (3L) Airpot Thermal Coffee Carafe/Lever Action/Stainless Steel Insulated Thermos / 12 Hour Heat Retention / 24 Hour Cold Retention</a></p>
     <div class="code_high">
       <p><span>Take <strong>10% off at $37.99</strong> using code:10AIRPOT</span></p>
+      <em>*Pricing may change or expire at anytime.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -301,6 +318,7 @@
     <p><a target="_blank" href="https://amzn.to/2CtyftP">USB Wall Charger,Moallia 2-Pack Dual Port USB Power Adapter Wall Charger Plug Compatible </a></p>
     <div class="code_high">
       <p><span>Take <strong>15% off at $15.98</strong> using code:15B24LTE</span></p>
+      <em>*Pricing may change or expire at anytime.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -318,6 +336,7 @@
     <p><a target="_blank" href="https://amzn.to/2Fioe36">Taymanso Universal 360° Swive Car Air Vent Phone Mount Holder Cradle</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $15.98</strong> using code:50IBY1ZJ</span></p>
+      <em>*Pricing may change or expire at anytime.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -335,6 +354,7 @@
     <p><a target="_blank" href="https://amzn.to/2uegiuG">Acumen Dash Cam for Cars 1080P FHD Driving Recorder Vehicle Dashboard Camera</a></p>
     <div class="code_high">
       <p><span>Take <strong>30% off at $29.99</strong> using code:30X5646E</span></p>
+      <em>*Pricing may change or expire at anytime.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -352,6 +372,7 @@
     <p><a target="_blank" href="https://amzn.to/2Y9X1rX">Rugged Geek RG1000 Safety GEN2 1000A Portable Car Jump Starter</a></p>
     <div class="code_high">
       <p><span>Take <strong>20% off at $119.99</strong> using code:20RGDGEEK</span></p>
+      <em>*Pricing may change or expire at anytime.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -369,6 +390,7 @@
     <p><a target="_blank" href="https://amzn.to/2ufpsqP">Hippococo Teepee Tent for Kids</a></p>
     <div class="code_high">
       <p><span>Take <strong>15% off at $79.97</strong> using code:15TEEPEE14</span></p>
+      <em>*Pricing may change or expire at anytime.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -385,6 +407,7 @@
     <p><a target="_blank" href="https://amzn.to/2TXHgVL">MR.TORCH BTS-8071 Trigger Start Handy Gas Welding Torch Head</a></p>
     <div class="code_high">
       <p><span>Take <strong>10% off at $39.99</strong> using code:10QWLRRD</span></p>
+      <em>*Pricing may change or expire at anytime.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -402,6 +425,7 @@
     <p><a target="_blank" href="https://amzn.to/2uePESt">ZORJAR Wool Winter Women Scarf Soft Pointed Twill Fashion Long Scarves</a></p>
     <div class="code_high">
       <p><span>Take <strong>70% off at $35.99</strong> using code:70N8SOPE</span></p>
+      <em>*Pricing may change or expire at anytime.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -419,6 +443,7 @@
     <p><a target="_blank" href="https://amzn.to/2Y91dZ9">VIJUVE Anti Aging Face Massager for Wrinkles Appearance Removal & Facial Skin Tightening </a></p>
     <div class="code_high">
       <p><span>Take <strong>20% off at $80.00</strong> using code:20EJRNX7</span></p>
+      <em>*Pricing may change or expire at anytime.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -436,6 +461,7 @@
     <p><a target="_blank" href="https://amzn.to/2CsSd85">VIJUVE Anti Aging Face Massager for Wrinkles Appearance Removal & Facial Skin Tightening </a></p>
     <div class="code_high">
       <p><span>Take <strong>20% off at $35.00</strong> using code:20EJRNX7</span></p>
+      <em>*Pricing may change or expire at anytime.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -453,6 +479,7 @@
     <p><a target="_blank" href="https://amzn.to/2ui4mYZ">VitaFiber IMO Syrup - Prebiotic Fiber Lower Calorie Sweetener - Sugar Alternative - 30 fl oz</a></p>
     <div class="code_high">
       <p><span>Take <strong>15% off at $18.99</strong> using code:15VITAFIBER</span></p>
+      <em>*Pricing may change or expire at anytime.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -470,6 +497,7 @@
     <p><a target="_blank" href="https://amzn.to/2Y8rXsH">VitaFiber IMO Powder - Prebiotic Fiber Sweetener – Sugar Alternative - 2.2 lbs</a></p>
     <div class="code_high">
       <p><span>Take <strong>15% off at $19.99</strong> using code:15VITAFIBER</span></p>
+      <em>*Pricing may change or expire at anytime.</em>
     </div>
   </div> 
   <div class="deal_btn">
